[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Fonts/Death_font_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Menu/Death.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/explosionCrunch_003.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Images/Menu/barHorizontal_blue_mid.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Menu/menu_bg.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Menu/barHorizontal_green_mid.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Menu/barHorizontal_yellow_mid.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/pageTitle.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Fonts/pageName.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assets/Fonts/pageBtn.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/Images/Menu/WA.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Menu/barHorizontal_red_mid.png" type="Texture" id=12]

[node name="Death" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldBackground" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 4.0

[node name="Stars" type="CPUParticles2D" parent="."]
position = Vector2( 207, -20 )
amount = 200
lifetime = 4.0
randomness = 0.7
emission_shape = 2
emission_rect_extents = Vector2( 200, 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.119
margin_top = -301.059
margin_right = 197.881
margin_bottom = 298.941
rect_min_size = Vector2( 400, 600 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 5.0
margin_right = -35.0
margin_bottom = -13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuName" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 9 )
text = "Death Menu"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 22.0
margin_right = 330.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 30 )

[node name="title" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 56.0
margin_right = 330.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Space"
align = 1
valign = 1

[node name="lb_score" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 114.0
margin_right = 330.0
margin_bottom = 175.0
mouse_filter = 0
input_pass_on_modal_close_click = false
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.113725, 0.541176, 0.0509804, 1 )
custom_colors/font_outline_modulate = Color( 0.607843, 1, 0.180392, 1 )
text = "SCORE:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 179.0
margin_right = 330.0
margin_bottom = 240.0
mouse_filter = 0
input_pass_on_modal_close_click = false
custom_fonts/font = ExtResource( 1 )
text = "You Died !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer1" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 244.0
margin_right = 330.0
margin_bottom = 274.0
rect_min_size = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShareBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 278.0
margin_right = 330.0
margin_bottom = 333.0
rect_min_size = Vector2( 0, 55 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="WALogo" type="TextureRect" parent="NinePatchRect/VBoxContainer/ShareBtn"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -15.0
margin_right = 45.0
margin_bottom = 15.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="NinePatchRect/VBoxContainer/ShareBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.05945
margin_bottom = -1.05945
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Share / Update"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 337.0
margin_right = 330.0
margin_bottom = 367.0
rect_min_size = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 371.0
margin_right = 330.0
margin_bottom = 426.0
rect_min_size = Vector2( 0, 55 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="label" type="Label" parent="NinePatchRect/VBoxContainer/playBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 430.0
margin_right = 330.0
margin_bottom = 460.0
rect_min_size = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 464.0
margin_right = 330.0
margin_bottom = 519.0
rect_min_size = Vector2( 0, 55 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="label" type="Label" parent="NinePatchRect/VBoxContainer/quitBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 523.0
margin_right = 330.0
margin_bottom = 553.0
rect_min_size = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 557.0
margin_right = 330.0
margin_bottom = 575.0
custom_fonts/font = ExtResource( 9 )
text = "alpha 0.3"
align = 2

[connection signal="gui_input" from="NinePatchRect/VBoxContainer/lb_score" to="." method="_on_Label_gui_input"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/ShareBtn" to="." method="_on_ShareBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/playBtn" to="." method="_on_playBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/quitBtn" to="." method="_on_quitBtn_pressed"]
